@@ -11,6 +11,8 @@ Evan Wright, Shlomy Reinstein, Marcelo Vanzin and Eric Le Lay for contributing
 to this release.
 
 {{{ Bug fixes
+- Fixed loading of jEdit in case of corrupted recent.xml file in the settings
+  (#3396545) (Matthieu Casanova)
 
 - Fixed a class loading issue when no GUI (SplashScreen or TrayIcon) was shown
   on startup. The effects were visible if the VoxSpell plugin was installed
